# ResourceManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Include/: ImageResource.hpp  MeshResource.hpp  Resource.hpp  ShaderResource.hpp
Include/Types/: PNG.h  STBImage.h
